bug fix on filters
